# PID-Comm

./: LICENSE  README.md
benchmarks/GNN_ARAG/: Makefile  run.sh  temporary_app
benchmarks/GNN_ARAG/GNN_kernel_1/: GNN_kernel_1.c
benchmarks/GNN_ARAG/GNN_kernel_2/: GNN_kernel_2.c
benchmarks/GNN_ARAG/data_relocate_AG/: dpu_relocate_AG.c
benchmarks/GNN_ARAG/host/: app.c
benchmarks/GNN_ARAG/support/: common.h  matrix.h  merge.h  partition.h
benchmarks/GNN_RSAR/: Makefile  run.sh
benchmarks/GNN_RSAR/GNN_kernel_1/: GNN_kernel_1.c
benchmarks/GNN_RSAR/GNN_kernel_2/: GNN_kernel_2.c
benchmarks/GNN_RSAR/data_relocate_comm/: dpu_relocate_comm.c
benchmarks/GNN_RSAR/host/: app.c
benchmarks/GNN_RSAR/support/: common.h  matrix.h  merge.h  partition.h
pidcomm_lib/: Makefile  make.sh
pidcomm_lib/data_relocate_clockwise/: data_relocate_clockwise.c
pidcomm_lib/data_relocate_clockwise_short/: data_relocate_clockwise_short.c
pidcomm_lib/data_relocate_counterclockwise/: data_relocate_counterclockwise.c
pidcomm_lib/data_relocate_incremental_counterclockwise/: data_relocate_incremental_counterclockwise.c
pidcomm_lib/data_relocate_modified_clockwise/: data_relocate_modified_clockwise.c
pidcomm_lib/data_relocate_modified_reverse_clockwise/: data_relocate_modified_reverse_clockwise.c
pidcomm_lib/data_relocate_reverse_clockwise/: data_relocate_reverse_clockwise.c
pidcomm_lib/data_relocate_reverse_clockwise_short/: data_relocate_reverse_clockwise_short.c
pidcomm_lib/dpu1/: dpu_relocate_in_place.c
pidcomm_lib/dpu11/: dpu_relocate_AG.c
pidcomm_lib/dpu12/: dpu_relocate_iter.c
pidcomm_lib/dpu2/: alltoall_x_2.c
pidcomm_lib/dpu3/: dpu_allreduce_2.c
pidcomm_lib/dpu4/: dpu_allreduce_2_y.c
pidcomm_lib/dpu5/: alltoall_22.c
pidcomm_lib/dpu6/: rs_relocate_24.c
pidcomm_lib/dpu7/: rs_relocate_22.c
pidcomm_lib/dpu8/: ar_relocate_24.c
pidcomm_lib/support/: commlib.c  commlib.h  common.h  timer.h
tutorial/: ._example_allreduce_dpu.c  AllReduce_demo.sh  dpu_user.c  example_allreduce.c
upmem-2021.3.0/: upmem_env.sh
upmem-2021.3.0/include/dpu/: dpu  dpu.h  dpu_error.h  dpu_log_internals.h  dpu_management.h  dpu_program.h  dpu_runner.h  merge.h  pidcomm.h  timer.h
upmem-2021.3.0/lib/: libdpu.so.0.0  libdpu.so.2021.3_backup  libdpuhw.so.2021.3  libdpuverbose.so.2021.3  libdpuvpd.so.2021.3
upmem-2021.3.0/share/pkgconfig/: dpu.pc
upmem-2021.3.0/src/backends/: .clang-format-pattern  CMakeLists.txt  compile_commands.json  load.sh
upmem-2021.3.0/src/backends/api/: CMakeLists.txt  DoxyfileCLowLevel.in
upmem-2021.3.0/src/backends/api/include/api/: commlib.h  common.h
upmem-2021.3.0/src/backends/api/include/lowlevel/: dpu_custom.h  dpu_hw_description.h  dpu_loader.h  dpu_memory.h
upmem-2021.3.0/src/backends/api/src/: commlib.c  common.c  dpu_elf.c  dpu_error.c  dpu_internals.c  dpu_loader.c  dpu_log.c  dpu_memory.c  dpu_profiler.c  dpu_program.c  dpu_rank_handler_allocator.c  merge.c  runtime_info.c  timer.c
upmem-2021.3.0/src/backends/api/src/api/: dpu_checkpoint.c  dpu_jni.c  dpu_memory.c  dpu_set.c  dpu_thread_job.c
upmem-2021.3.0/src/backends/api/src/api/include/: dpu_api_load.h  dpu_api_verbose.h  dpu_thread_job.h
upmem-2021.3.0/src/backends/api/src/include/: dpu_internals.h
upmem-2021.3.0/src/backends/cmake/modules/: FindLibFtdi.cmake  FindLibNuma.cmake  FindLibUdev.cmake  FindSSE.cmake
upmem-2021.3.0/src/backends/commons/include/: dpu_rank_handler.h  rank_features.def
upmem-2021.3.0/src/backends/commons/src/: dpu_characteristics.h
upmem-2021.3.0/src/backends/hw/: CMakeLists.txt
upmem-2021.3.0/src/backends/hw/src/commons/: dpu_module_compatibility.h  dpu_rank_ioctl.h  dpu_region_address_translation.h  dpu_region_constants.h
upmem-2021.3.0/src/backends/hw/src/mappings/fpga_aws/: fpga_aws_translation.c
upmem-2021.3.0/src/backends/hw/src/mappings/power9/: power9_translation.c
upmem-2021.3.0/src/backends/hw/src/mappings/xeon_sp/: pid_comm.c
upmem-2021.3.0/src/backends/hw/src/rank/: fpga_ila.c  hw_dpu_rank.c  hw_dpu_sysfs.c  hw_dpu_sysfs.h
upmem-2021.3.0/src/backends/java/src/main/java/com/upmem/dpu/: DpuFaultDump.java  DpuProfile.java  DpuSet.java  DpuSetAsync.java  DpuSymbol.java  DpuSystem.java  DpuTarget.java
upmem-2021.3.0/src/backends/python/: CMakeLists.txt
upmem-2021.3.0/src/backends/python/dpu/: __init__.py  compiler.py  disasm.py  isa.py
upmem-2021.3.0/src/backends/ufi/: .clang-format-pattern
upmem-2021.3.0/src/backends/ufi/include/ufi/: ufi.h  ufi_ci_types.h  ufi_config.h  ufi_debug.h  ufi_memory.h
upmem-2021.3.0/src/backends/ufi/src/: ufi.c  ufi_bit_config.c
upmem-2021.3.0/src/backends/vpd/: CMakeLists.txt
upmem-2021.3.0/src/backends/vpd/src/: E19.vpd  dpu_vpd.c  dpu_vpd_container.c  dpu_vpd_container.h  dpu_vpd_decode.c  dpu_vpd_decode.h  dpu_vpd_encode.c  dpu_vpd_encode.h
upmem-2021.3.0/src/dpu-rt/: Toolchain-dpu.cmake
upmem-2021.3.0_opt/: upmem_env.sh
upmem-2021.3.0_opt/include/dpu/: dpu.h  dpu.hpp  dpu_chip_id.h  dpu_config.h  dpu_description.h  dpu_log.h  dpu_memory.h  dpu_transfer_matrix.h  dpu_vpd.h  dpu_vpd_structures.h  pidcomm.h  (+1 more)
upmem-2021.3.0_opt/lib/: libLTO.so.12  libdpu-ufi.so.2021.3  libdpu.so.0.0  libdpu.so.2021.3  libdpuhw.so.2021.3  libdpuhw.so.2021.3-custom  libdpuhw.so.2021.3_backup  libdpujni.so.2021.3  libdputracecommons.so.2021.3  liblldb.so.12
upmem-2021.3.0_opt/src/backends/host-lldb-attach-dpu/: CMakeLists.txt  lldb-attach-dpu.c
upmem-2021.3.0_opt/src/backends/ufi/: .clang-format  .clang-format-pattern  CMakeLists.txt
upmem-2021.3.0_opt/src/backends/ufi/include/ufi/: ufi_runner.h
upmem-2021.3.0_opt/src/backends/ufi/src/: ufi_ci.c  ufi_config.c  ufi_debug.c  ufi_dma_wavegen_config.c  ufi_memory.c  ufi_rank_utils.h  ufi_runner.c
upmem-2021.3.0_opt/src/backends/verbose/: CMakeLists.txt
upmem-2021.3.0_opt/src/dpu-rt/: CMakeLists.txt
upmem-2021.3.0_opt/src/dpu-rt/src/misc/: coreDump.c  restoreRegisters.c  restore_carry_and_zero_flag.h  swreset.S
upmem-2021.3.0_opt/src/dpu-rt/src/stdlib/: strspn.c
upmem-2021.3.0_opt/src/dpu-rt/src/syslib/: buddy_alloc.h  sem.h
(+90 files in other folders)
